--- a/InventoryService/InventoryService.csproj
+++ b/InventoryService/InventoryService.csproj
@@ -42,9 +42,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Actors\InventoryActor.cs" />
-    <Compile Include="Actors\InventorySectionActor.cs" />
     <Compile Include="Messages\ReserveMessage.cs" />
     <Compile Include="Messages\ReservedMessage.cs" />
+    <Compile Include="Actors\ProductInventoryActor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
