--- a/InventoryService.Tests/packages.config
+++ b/InventoryService.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="Akka" version="1.0.8" targetFramework="net45" />
   <package id="Akka.TestKit" version="1.0.8" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.8" targetFramework="net45" />
+  <package id="FsCheck" version="2.4.0" targetFramework="net45" />
+  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="xunit" version="2.0.0" targetFramework="net45" />
