--- a/InventoryService.Tests/app.config
+++ b/InventoryService.Tests/app.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="akka"
-             type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
 
   <akka>
@@ -24,4 +23,12 @@
       ]]>
     </hocon>
   </akka>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.assert" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.3179" newVersion="2.1.0.3179" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
