Making console task runs async

--- a/InventoryService.Repository.AzureTable/InventoryService.Repository.AzureTable.csproj
+++ b/InventoryService.Repository.AzureTable/InventoryService.Repository.AzureTable.csproj
@@ -73,7 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service.cs" />
+    <Compile Include="AzureTableRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
