--- a/InventoryService.Repository/InventoryService.Repository.csproj
+++ b/InventoryService.Repository/InventoryService.Repository.csproj
@@ -32,7 +32,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IInventoryServiceRepository.cs" />
+    <Compile Include="IInventoryStorage.cs" />
     <Compile Include="InMemoryInventoryServiceRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InventoryServiceRepository.cs" />
