--- a/InventoryService.Storage.AzureTable/InventoryService.Storage.AzureTable.csproj
+++ b/InventoryService.Storage.AzureTable/InventoryService.Storage.AzureTable.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D65E194-DABD-4AC3-9865-39DB0E5F068B}</ProjectGuid>
+    <ProjectGuid>{C850EA74-43D7-439F-9F61-76C233141290}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InventoryService.Storage</RootNamespace>
+    <RootNamespace>InventoryService.Storage.AzureTable</RootNamespace>
     <AssemblyName>InventoryService.Storage.AzureTable</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
