--- a/InventoryService.Storage.FileSystem/InventoryService.Storage.FileSystem.csproj
+++ b/InventoryService.Storage.FileSystem/InventoryService.Storage.FileSystem.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InventoryServiceRepository.cs" />
+    <Compile Include="FileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
