Moving configuration into .config

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -1,9 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka"/>
+  </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  <akka>
+    <hocon>
+      <![CDATA[
+akka {
+    actor {
+        serializers {
+            wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+        }
+        
+        serialization-bindings {
+            "System.Object" = wire
+        }
+
+        provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
+    
+        debug {  
+            receive = on 
+            autoreceive = on
+            lifecycle = on
+            event-stream = on
+            unhandled = on
+        }
+    }
+
+    remote {
+                helios.tcp {
+                    port = 0
+                    hostname = localhost
+                }
+            }
+}
+      ]]>
+    </hocon>
+  </akka>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
