Moving configuration into .config

--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -1,8 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <connectionStrings>
+    <!--<add name="RavenDB" connectionString="Url=http://ravendbdes.officialcommunity.net;Database=VLAD" />-->
+    <add name="RavenDB" connectionString="Url=http://occvm1.eastus.cloudapp.azure.com;Database=LEAPINVENTORY" />
+  </connectionStrings>
+  <akka>
+    <hocon>
+      <![CDATA[
+akka {
+    actor {
+        serializers {
+            wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
+        }
+        
+        serialization-bindings {
+            "System.Object" = wire
+        }
+
+        provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
+    
+        debug {  
+            receive = on 
+            autoreceive = on
+            lifecycle = on
+            event-stream = on
+            unhandled = on
+        }
+    }
+
+    remote {
+                helios.tcp {
+                    port = 10000
+                    hostname = 0.0.0.0
+                    public-hostname = localhost
+                }
+            }
+}
+      ]]>
+    </hocon>
+  </akka>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
