--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -3,12 +3,15 @@
   <configSections>
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
+  <appSettings>
+    <add key="Storage" value="InventoryService.Storage.InMemory, InventoryService.Storage.InMemory" />
+    <!--<add key="Storage" value="InventoryService.Storage.Esent, InventoryService.Storage.Esent" />-->
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <!--<add name="RavenDB" connectionString="Url=http://ravendbdes.officialcommunity.net;Database=VLAD" />-->
-    <add name="RavenDB" connectionString="Url=http://occvm1.eastus.cloudapp.azure.com;Database=LEAPINVENTORY" />
+
   </connectionStrings>
   <akka>
     <hocon>
