--- a/InventoryService.Console/packages.config
+++ b/InventoryService.Console/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.0.8.25-beta" targetFramework="net452" />
-  <package id="Akka.Remote" version="1.0.8" targetFramework="net452" />
+  <package id="Akka" version="1.1.0" targetFramework="net452" />
+  <package id="Akka.Cluster" version="1.1.0" targetFramework="net452" />
+  <package id="Akka.Remote" version="1.1.0" targetFramework="net452" />
   <package id="Akka.Serialization.Wire" version="1.0.8.25-beta" targetFramework="net452" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
-  <package id="Helios" version="1.4.1" targetFramework="net452" />
+  <package id="Helios" version="2.1.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="Wire" version="0.0.6" targetFramework="net452" />
