--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -40,7 +40,7 @@ akka {
     remote {
                 helios.tcp {
                     port = 10000
-                    hostname = 0.0.0.0
+                    hostname = localhost
                     public-hostname = localhost
                 }
             }
