--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -36,8 +36,13 @@ akka {
             unhandled = on
         }
     }
-
+    
+    loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
+    
     remote {
+              log-remote-lifecycle-events = DEBUG
+              log-received-messages = on
+              log-sent-messages = on
                 helios.tcp {
                     port = 10000
                     hostname = localhost
