--- a/InventoryService/InventoryService.csproj
+++ b/InventoryService/InventoryService.csproj
@@ -44,23 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IPerformanceService.cs" />
-    <Compile Include="Messages\FlushStreamMessage.cs" />
     <Compile Include="Messages\FlushStreamsMessage.cs" />
-    <Compile Include="Messages\RetrievedInventoryMessage.cs" />
-    <Compile Include="Messages\GetMetrics.cs" />
+    <Compile Include="Messages\GetMetricsMessage.cs" />
+    <Compile Include="Messages\LoadedInventoryMessage.cs" />
+    <Compile Include="Messages\WriteInventoryMessage.cs" />
     <Compile Include="Messages\WriteReservationsMessage.cs" />
+    <Compile Include="Messages\WroteInventoryMessage.cs" />
     <Compile Include="Messages\WroteReservationsMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Actors\InventoryActor.cs" />
-    <Compile Include="Messages\ReserveMessage.cs" />
-    <Compile Include="Messages\ReservedMessage.cs" />
     <Compile Include="Actors\ProductInventoryActor.cs" />
-    <Compile Include="Messages\LoadedInventoryMessage.cs" />
-    <Compile Include="Messages\GetInventoryMessage.cs" />
-    <Compile Include="Messages\PurchaseMessage.cs" />
-    <Compile Include="Messages\PurchasedMessage.cs" />
-    <Compile Include="Messages\WriteInventoryMessage.cs" />
-    <Compile Include="Messages\WroteInventoryMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -71,6 +64,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\InventoryService.Messages\InventoryService.Messages.csproj">
+      <Project>{0a7a978d-2bd7-4a10-9088-28c74b5aff80}</Project>
+      <Name>InventoryService.Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryService.Storage\InventoryService.Storage.csproj">
       <Project>{69C4264A-CB21-47F8-A467-6072172DA842}</Project>
       <Name>InventoryService.Storage</Name>
