Adding Holds functionality

--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -42,9 +42,13 @@
   <ItemGroup>
     <Compile Include="GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchasedFromHoldsMessage.cs" />
     <Compile Include="PurchasedMessage.cs" />
+    <Compile Include="PurchaseFromHoldsMessage.cs" />
     <Compile Include="PurchaseMessage.cs" />
+    <Compile Include="PlacedHoldMessage.cs" />
     <Compile Include="ReservedMessage.cs" />
+    <Compile Include="PlaceHoldMessage.cs" />
     <Compile Include="ReserveMessage.cs" />
     <Compile Include="RetrievedInventoryMessage.cs" />
   </ItemGroup>
