Add build script, update messages and refactor models
Added nuget and docker builds and did some refactorings

--- a/InventoryService.Console/App.config
+++ b/InventoryService.Console/App.config
@@ -5,20 +5,14 @@
   </configSections>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="RemoteActorAddress" value="akka.tcp://InventoryService-Server@localhost:8099/user/InventoryActor" />
   </appSettings>
   <akka>
     <hocon>
       <![CDATA[
 akka {
     actor {
-        serializers {
-            wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
-        }
-        
-        serialization-bindings {
-            "System.Object" = wire
-        }
-
+      
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
     
         debug {  
@@ -33,7 +27,7 @@ akka {
     remote {
                 helios.tcp {
                     port = 0
-                    hostname = localhost
+                    hostname  = localhost
                 }
             }
 }
