--- a/InventoryService.Server/App.config
+++ b/InventoryService.Server/App.config
@@ -4,8 +4,9 @@
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
   </configSections>
   <appSettings>
-    <add key="Storage" value="InventoryService.Storage.InMemory, InventoryService.Storage.InMemory" />
-    <!--<add key="Storage" value="InventoryService.Storage.Esent, InventoryService.Storage.Esent" />-->
+    <!--<add key="Storage" value="InventoryService.Storage.InMemory, InventoryService.Storage.InMemory" />-->
+    <add key="Storage" value="InventoryService.Storage.EsentLib.Esent, InventoryService.Storage.EsentLib" />
+    <add key="ServerActorSystemName" value="InventoryService-Server" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -17,15 +18,12 @@
     <hocon>
       <![CDATA[
 akka {
+    loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
+    stdout-loglevel = DEBUG
+    loglevel = DEBUG
+    log-config-on-start = on 
     actor {
-        serializers {
-            wire = "Akka.Serialization.WireSerializer, Akka.Serialization.Wire"
-        }
-        
-        serialization-bindings {
-            "System.Object" = wire
-        }
-
+     
         provider = "Akka.Remote.RemoteActorRefProvider, Akka.Remote"
     
         debug {  
@@ -37,16 +35,14 @@ akka {
         }
     }
     
-    loggers = ["Akka.Logger.NLog.NLogLogger,Akka.Logger.NLog"]
-    
+ 
     remote {
               log-remote-lifecycle-events = DEBUG
               log-received-messages = on
               log-sent-messages = on
                 helios.tcp {
-                    port = 10000
-                    hostname = localhost
-                    public-hostname = localhost
+                    port = 8099
+                    hostname = "0.0.0.0"
                 }
             }
 }
