--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -42,15 +42,17 @@
   <ItemGroup>
     <Compile Include="GetInventoryMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PurchasedFromHoldsMessage.cs" />
+    <Compile Include="PurchaseFromHoldsCompletedMessage.cs" />
     <Compile Include="PurchasedMessage.cs" />
     <Compile Include="PurchaseFromHoldsMessage.cs" />
     <Compile Include="PurchaseMessage.cs" />
-    <Compile Include="PlacedHoldMessage.cs" />
-    <Compile Include="ReservedMessage.cs" />
+    <Compile Include="PlaceHoldCompletedMessage.cs" />
+    <Compile Include="UpdateQuantityCompletedMessage.cs" />
+    <Compile Include="ReserveCompletedMessage.cs" />
     <Compile Include="PlaceHoldMessage.cs" />
+    <Compile Include="UpdateQuantityMessage.cs" />
     <Compile Include="ReserveMessage.cs" />
-    <Compile Include="RetrievedInventoryMessage.cs" />
+    <Compile Include="RetrieveInventoryCompletedMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
