--- a/InventoryService.Storage/InventoryService.Storage.csproj
+++ b/InventoryService.Storage/InventoryService.Storage.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IInventoryStorage.cs" />
+    <Compile Include="RealTimeInventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
